# vigilant-fishstick

./: analyze.ipynb  app.py  backend.py  calculator.py  docker-compose.yml  item_collection_mapping.csv  item_crate_mapping.csv  item_metadata.csv  main.py  per_item_ev.ipynb  pyproject.toml  scrape.ipynb  util.py
database/: database_connection.py  mapped_classes.py
