[project]
name = "csgoskins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crochet>=2.1.1",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.2",
    "mysql-connector-python>=9.6.0",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pyqt6>=6.10.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "robust-json-parser>=0.1.6",
    "scrapy>=2.14.1",
    "sqlalchemy>=2.0.46",
]
